# foundry-workshop

./: .env.example  .gitignore  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: deploy-docs.yml
docs/: concepts.md  index.md  setup.md
docs/modules/: 01-first-inference.ipynb  02-your-first-agent.ipynb  03-tools-and-function-calling.ipynb  04-grounding-rag-foundry-iq.ipynb  05-mcp-tools.ipynb  05b-work-iq.ipynb  06-agent-memory.ipynb  07-multi-agent-orchestration.ipynb  08-deep-research.ipynb  09-evaluation.ipynb  10-observability-tracing.ipynb  11-guardrails.ipynb  12-red-teaming.ipynb  13-human-in-the-loop-and-rest.ipynb  14-fine-tuning-distillation.ipynb  15-capstone.ipynb
docs/platform/: 01-what-is-foundry.md  02-architecture-and-projects.md  03-control-plane-and-governance.md  04-mcp-tool-servers.md
scripts/: gen_01_first_inference.py  gen_02_your_first_agent.py  gen_03_tools_and_function_calling.py  gen_04_grounding_rag_foundry_iq.py  gen_05_mcp_tools.py  gen_05b_work_iq.py  gen_06_agent_memory.py  gen_07_multi_agent_orchestration.py  gen_08_deep_research.py  gen_09_evaluation.py  gen_10_observability_tracing.py  gen_11_guardrails.py  gen_12_red_teaming.py  gen_13_human_in_the_loop_and_rest.py  gen_14_fine_tuning_distillation.py  gen_15_capstone.py  gen_diagrams.py  nbbuild.py
