[project]
name = "foundry-workshop"
version = "0.1.0"
description = "A hands-on, end-to-end coding workshop for building enterprise AI agents and apps on Microsoft Foundry (Azure AI Foundry)."
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = { text = "MIT" }

# Runtime dependencies the LAB NOTEBOOKS import when run against your own
# Foundry project. Versions mirror the upstream reference series and are
# pre-release in places (Foundry SDKs move fast) — see docs/setup.md.
# NOTE: the published site renders SAVED outputs (mkdocs-jupyter execute:false),
# so none of these are needed merely to read/build the site — only to RUN labs.
dependencies = [
    # Core Foundry SDKs
    "azure-ai-projects>=2.1.0",
    "azure-identity>=1.26.0b2",
    "openai>=1.0.0",
    "python-dotenv>=1.2.1",
    # Grounding / RAG (M4, M7)
    "azure-search-documents>=11.7.0b2",
    # Evaluation + red teaming (M9, M12)
    "azure-ai-evaluation[redteam]>=1.16.2",
    # Observability (M10)
    "azure-monitor-opentelemetry>=1.6.0",
    "azure-monitor-query>=1.4.0",
    # Multi-agent orchestration (M7) — pinned: azure-ai's last release is
    # 1.0.0rc6; newer core/openai drop symbols azure-ai still imports.
    "agent-framework-core==1.0.0rc6",
    "agent-framework-azure-ai==1.0.0rc6",
    # Data / utilities
    "datasets>=3.0.0",
    "pandas>=2.0.0",
    "requests>=2.32.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
# Tools to author/run the notebooks and build the site locally.
docs = [
    "jupyter>=1.0",
    "nbconvert>=7.16",
    "ipykernel>=6.29",
    "nbformat>=5.9",
    "mkdocs-material>=9.5",
    "mkdocs-jupyter>=0.25",
    "pymdown-extensions>=10.7",
]

# Fine-tuning lab (M14) — pulls in PyTorch + Hugging Face. Large install.
# transformers pinned to the 4.x line: Phi-4-mini's remote code imports
# symbols removed in transformers 5.x. Install with: pip install -e ".[finetune]"
finetune = [
    "torch>=2.0.0",
    "transformers>=4.46.0,<5.0.0",
    "peft>=0.10.0",
    "matplotlib>=3.7.0",
    "azure-storage-blob>=12.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# This repo ships notebooks + scripts, not an importable package. Allow an
# editable install (`pip install -e ".[docs]"`) to pull in dependencies/extras
# without selecting any package to build.
bypass-selection = true
